changes to rag narrative and frontend
